--- a/variables/_colores.scss
+++ b/variables/_colores.scss
@@ -4,7 +4,8 @@ $color-h1: #d2eff8;
 $color-fondoGris: #f7f7f7;
 $color-footer: #b4b3b3;
 $color-verde: #a4c639;
-$color-azul: #1a6692;
+$color-azul: #008CBA;
 $color-rojo: #fd1919;
 $color-grisClaro: #eee;
 $color-grisOscuro: #666;
+$color-blancoTransparente: rgba(245, 245, 245, 0.712)
