--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,132 +1,292 @@
 @charset "UTF-8";
-* {
-  margin: 0;
-  padding: 0;
-  font-size: 1.2rem;
-  font-family: 'Nunito Sans', sans-serif;
-  box-sizing: border-box; }
-
+/*--------------------------------ESTILOS GENERALES--------------------------------*/
 section {
   padding: 2% 10%; }
 
-/*-------------------------HEADER--------------------------------*/
+.transformScale:hover {
+  transform: scale(1.1);
+  transition: all .5s; }
+
+.botonTurquesaLight {
+  background-color: white;
+  color: #63bfce;
+  border: 2px solid #63bfce;
+  transition: all 0.3s; }
+
+.botonTraslucido {
+  background-color: rgba(245, 245, 245, 0.712);
+  font-weight: 500;
+  color: black;
+  transition: all 0.3s; }
+
+.botonTurquesaLight:hover {
+  background-color: #63bfce;
+  color: white;
+  transition: all 0.3s; }
+
+.botonVerde {
+  background-color: #a4c639;
+  color: white;
+  font-size: 1rem;
+  border: none;
+  text-transform: uppercase;
+  font-weight: 600;
+  padding: 12px 30px;
+  border-radius: 30px;
+  display: inline-block;
+  margin-bottom: 50px;
+  text-decoration: none;
+  transition: all 0.3s; }
+
+.seccionFondoGris {
+  background-color: #f7f7f7;
+  margin-top: 50px; }
+
+.tituloSeccion {
+  text-align: center;
+  margin-bottom: 1rem;
+  border-bottom: 1px solid #eee;
+  font-family: 'Nunito Sans', sans-serif; }
+  .tituloSeccion h2 {
+    font-size: 1.8rem;
+    font-weight: 600;
+    margin-bottom: 15px;
+    margin-top: 50px; }
+
+/*---------------------------------HEADER--------------------------------*/
 header {
-  background: #63bfce; }
+  background: #63bfce;
+  font-size: 1.4rem;
+  font-family: 'Nunito Sans', sans-serif; }
+  header .ubicacion {
+    font-size: 1.2rem;
+    text-decoration: none;
+    padding-top: 10px; }
   header h1 {
     color: #d2eff8;
+    color: white;
     text-align: left;
     font-family: 'Alice', serif; }
   header .transformScale:hover {
     color: white; }
 
-/*-------------------------FOOTER--------------------------------*/
+/*--------------------------------FOOTER--------------------------------*/
 footer {
-  background-color: #b4b3b3; }
+  background-color: #b4b3b3;
+  background-color: #F9F9F9; }
+  footer .link-dark:hover {
+    color: #63bfce; }
+  footer .redes {
+    font-size: 1.4rem; }
 
-/*-----------------FORMATO DE PAGINA DE CATALOGO-----------------*/
-.transformScale:hover {
-  transform: scale(1.3);
-  transition: all .5s;
-  z-index: 1; }
+/*----------------------FORMATO DE PAGINA DE INICIO-----------------------*/
+.carousel h3 {
+  font-size: 1.8rem;
+  font-family: 'Nunito Sans', sans-serif;
+  font-weight: bold; }
+
+.carousel p {
+  font-size: 1.3rem; }
+
+.seccionAsesoramiento .recuadroIcono {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 3rem;
+  height: 3rem;
+  font-size: 1.5rem;
+  border-radius: .75rem;
+  background-color: white; }
+  .seccionAsesoramiento .recuadroIcono .bi {
+    vertical-align: auto;
+    color: #a4c639; }
+
+.seccionAsesoramiento h3 {
+  font-family: 'Nunito Sans', sans-serif;
+  font-size: 1.5rem;
+  font-weight: 600; }
+
+.seccionAsesoramiento p {
+  font-size: 1.1rem; }
+
+.tarjetasEspecies {
+  height: 300px;
+  color: white;
+  border-radius: 10px; }
+  .tarjetasEspecies h2 {
+    font-family: 'Nunito Sans', sans-serif;
+    font-weight: 800;
+    text-shadow: black 1px 2px; }
+  .tarjetasEspecies a {
+    font-size: .8rem; }
+  .tarjetasEspecies a:hover {
+    border: solid white 2px;
+    transition: all 0.3s; }
+
+/*---------------------FORMATO DE PAGINA DE CATALOGO----------------------*/
+.menuCatalogo {
+  font-size: 1.1rem; }
+  .menuCatalogo a {
+    text-decoration: none;
+    color: black; }
+  .menuCatalogo .especies:hover {
+    color: #63bfce;
+    text-decoration: underline;
+    font-weight: 500; }
+
+.tituloCatalogo {
+  text-align: center;
+  margin-bottom: 25px;
+  border-bottom: 1px solid #eee;
+  font-family: 'Nunito Sans', sans-serif; }
+  .tituloCatalogo h2 {
+    font-size: 1.8rem;
+    font-weight: 600;
+    margin-bottom: 10px;
+    color: #a4c639; }
 
 .marcoProducto {
   border: 1px solid #eee;
-  margin-bottom: 30px; }
+  margin-bottom: 30px;
+  padding-bottom: 20px; }
   .marcoProducto img {
     width: 100%;
     overflow: hidden; }
   .marcoProducto .infoProducto {
-    padding: 30px;
+    padding: 5%;
     position: relative; }
     .marcoProducto .infoProducto p {
       font-size: 17px;
-      color: #1a6692;
-      margin-bottom: 20px; }
+      color: #008CBA;
+      margin-bottom: 10px; }
     .marcoProducto .infoProducto .precioProducto {
-      position: absolute;
-      top: 30px;
-      right: 30px;
+      margin-bottom: 15px;
       font-size: 18px;
       color: black; }
     .marcoProducto .infoProducto .nombreProducto {
       margin-bottom: 30px;
-      font-size: 25px; }
-    .marcoProducto .infoProducto a {
+      font-size: 1.1rem; }
+    .marcoProducto .infoProducto .botonComprar {
       position: absolute;
-      right: 30px;
-      bottom: 30px;
-      font-size: 18px;
+      right: 20px;
+      bottom: -5px;
+      font-size: 1rem;
+      background-color: white;
       color: #a4c639;
-      text-decoration: none; }
-    .marcoProducto .infoProducto .noDisponible {
-      color: gray; }
+      font-weight: 450;
+      text-decoration: none;
+      border: 1px solid #a4c639;
+      margin-top: 20px; }
+    .marcoProducto .infoProducto .botonComprar:hover {
+      transform: scale(1.1);
+      transition: all .5s;
+      background-color: #a4c639;
+      color: white; }
     .marcoProducto .infoProducto .sinStock {
       color: #fd1919; }
+    .marcoProducto .infoProducto .botonNoDisponible {
+      position: absolute;
+      right: 20px;
+      bottom: -5px;
+      font-size: 1rem;
+      background-color: white;
+      color: grey;
+      font-weight: 450;
+      text-decoration: none;
+      border: 1px solid #eee;
+      margin-top: 20px;
+      cursor: default; }
 
-/*-----------------FORMATO DE PAGINA BLOG------------------------*/
+/*------------------------FORMATO DE PAGINA BLOG------------------------*/
 .notasBlog {
   margin-top: 30px;
-  margin-bottom: 30px;
-  padding: 2%; }
+  margin-bottom: 30px; }
   .notasBlog img {
     width: 100%; }
+  .notasBlog span {
+    font-size: 1.1rem; }
   .notasBlog h2 {
-    font-size: 30px;
+    font-size: 1.8rem;
     font-weight: 600;
-    margin: 20px 0; }
+    margin: 20px 0;
+    font-family: 'Nunito Sans', sans-serif; }
+  .notasBlog p {
+    font-weight: 1.1rem; }
   .notasBlog a {
     color: #a4c639; }
+  .notasBlog a:hover {
+    font-weight: 600; }
 
-/*-----------------FORMATO DE PAGINA DE NOSOTROS-----------------*/
+.contenidoNotas {
+  margin-left: 30px;
+  margin-right: 30px; }
+  .contenidoNotas img {
+    width: 100%; }
+  .contenidoNotas p {
+    margin-top: 30px;
+    font-size: 1.1rem; }
+  .contenidoNotas h3 {
+    font-size: 1.5rem;
+    font-family: 'Nunito Sans', sans-serif;
+    font-weight: 600;
+    margin-top: 40px;
+    color: #63bfce; }
+  .contenidoNotas .stickyDerecho h4 {
+    font-size: 1.3rem; }
+  .contenidoNotas .stickyDerecho .botonEtiqueta {
+    border: none;
+    border-radius: 20px; }
+  .contenidoNotas .stickyDerecho .botonEtiqueta:hover {
+    background-color: rgba(245, 245, 245, 0.712);
+    color: #a4c639; }
+  .contenidoNotas .stickyDerecho a {
+    text-decoration: none;
+    color: black;
+    font-family: 'Nunito Sans', sans-serif;
+    font-size: 1.2rem; }
+  .contenidoNotas .stickyDerecho a:hover {
+    font-weight: 600; }
+  .contenidoNotas .stickyDerecho p {
+    margin-top: 0px;
+    font-size: 1rem;
+    color: #666; }
+  .contenidoNotas .stickyDerecho .volver {
+    font-size: 1.1rem;
+    text-decoration: underline;
+    color: #a4c639; }
+
+.comentarios {
+  border: solid 1px #eee;
+  border-radius: 10px;
+  margin-bottom: 50px; }
+
+/*-----------------------FORMATO DE PAGINA DE NOSOTROS--------------------*/
 .seccionNosotros {
-  margin-top: 80px; }
+  margin-top: 50px; }
   .seccionNosotros .imagenDerecha img {
     width: 100%;
     overflow: hidden; }
   .seccionNosotros .infoIzquierda span {
     text-transform: uppercase;
-    font-size: 15px;
+    font-size: 1rem;
     color: #666;
     letter-spacing: 1px;
     margin-bottom: 10px;
     display: block; }
   .seccionNosotros .infoIzquierda h2 {
-    font-size: 36px;
+    font-size: 2.2rem;
     font-weight: 600;
-    margin-bottom: 35px; }
+    margin-bottom: 35px;
+    font-family: 'Alice', serif; }
   .seccionNosotros .infoIzquierda em {
     font-style: normal;
-    color: #a4c639; }
-  .seccionNosotros .infoIzquierda a:hover {
-    background-color: white;
     color: #a4c639;
-    border: solid 1px #a4c639;
-    text-decoration: none; }
-
-.botonVerde {
-  background-color: #a4c639;
-  color: white;
-  font-size: 13px;
-  text-transform: uppercase;
-  font-weight: 700;
-  padding: 12px 30px;
-  border-radius: 30px;
-  display: inline-block;
-  transition: all 0.3s;
-  margin-bottom: 50px;
-  text-decoration: none; }
-
-.seccionFondoGris {
-  background-color: #f7f7f7;
-  margin-top: 100px;
-  padding-bottom: 100px; }
-
-.tituloEquipo {
-  text-align: center;
-  margin: 80px 0; }
-  .tituloEquipo h2 {
-    font-size: 36px;
-    font-weight: 600; }
+    font-family: 'Nunito Sans', sans-serif;
+    font-size: 1.6rem; }
+  .seccionNosotros .infoIzquierda p {
+    font-size: 1.1rem; }
+  .seccionNosotros .infoIzquierda a:hover {
+    color: white; }
 
 .miembroEquipo img {
   width: 100%;
@@ -137,24 +297,28 @@ footer {
   background-color: white;
   padding: 30px; }
   .miembroEquipo .infoEquipo h4 {
-    font-size: 25px;
-    font-weight: 700;
+    font-size: 1.4rem;
+    font-weight: 600;
     letter-spacing: 0.25px;
-    margin-bottom: 10px; }
+    margin-bottom: 0;
+    padding-top: 10px; }
+  .miembroEquipo .infoEquipo .redes {
+    font-size: 1.2rem; }
   .miembroEquipo .infoEquipo span {
     color: #a4c639;
     font-weight: 600;
-    font-size: 20px;
+    font-size: 1.2rem;
     display: block;
     margin-bottom: 15px; }
   .miembroEquipo .infoEquipo p {
-    margin-bottom: 20px; }
+    margin-bottom: 20px;
+    font-size: 1.1rem; }
 
-/*-----------------FORMATO DE PAGINA DE CONTACTO-----------------*/
+/*---------------------FORMATO DE PAGINA DE CONTACTO---------------------*/
 .contactoInfo {
   margin-top: 50px; }
   .contactoInfo .contactoItem {
-    padding: 60px 30px;
+    padding: 40px 30px;
     margin-bottom: 30px;
     background-color: #f7f7f7;
     text-align: center; }
@@ -163,42 +327,46 @@ footer {
       font-size: 48px;
       margin-bottom: 40px; }
     .contactoInfo .contactoItem h4 {
-      font-size: 20px;
-      font-weight: 700;
-      letter-spacing: 0.25px;
+      font-size: 1.4rem;
+      font-weight: 600;
       margin-bottom: 15px; }
     .contactoInfo .contactoItem p {
-      margin-bottom: 20px; }
+      margin-bottom: 20px;
+      font-size: 1.1rem; }
     .contactoInfo .contactoItem a {
       font-weight: 600;
       color: #a4c639;
       font-size: 15px; }
 
-.tituloSeccion {
-  text-align: center;
-  margin-bottom: 40px;
-  border-bottom: 1px solid #eee; }
-  .tituloSeccion h2 {
-    font-size: 28px;
-    font-weight: 600;
-    margin-bottom: 15px;
-    margin-top: 50px; }
-
 form {
   width: 70%;
-  margin: auto; }
-  form input:hover {
-    border: solid 1px #666;
-    color: #666; }
-  form .botonVerde {
-    border: none; }
+  margin: auto;
+  font-size: 1.1rem; }
+  form label {
+    color: #a4c639; }
 
-.form-group label {
-  color: #a4c639; }
+.botonComprar {
+  position: absolute;
+  right: 25px;
+  bottom: 1px;
+  font-size: 1rem;
+  background-color: white;
+  color: #a4c639;
+  font-weight: 450;
+  text-decoration: none;
+  border: 1px solid #a4c639;
+  margin-top: 20px;
+  transition: all 0.3s; }
+
+.botonComprar:hover {
+  transform: scale(1.1);
+  transition: all .5s; }
 
 /*
     ¡¡¡PARA RETOMAR LA COMPILACION LUEGO DE CERRAR EL PROYECTO!!!
      1- Entrar a la consola y posicionarme en la carpeta de mi proyecto con el comando cd
+        C:\Users\Karen\Desktop\Desarrollo Web - CoderHouse\•ROUND DOS•\PROYECTO FINAL - FINAL
+
      2- Ejecutar el comando: npm run watch-css. Y listo, sigo programando con SASS 
 
 */
