--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -1,4 +1,5 @@
 @import "variables/colores";
+@import "variables/tipografias";
 
 /*--------------------------------ESTILOS GENERALES--------------------------------*/
 section {
@@ -7,27 +8,26 @@ section {
 
 .transformScale:hover {
     transform: scale(1.1);
-    transition: all .5s;    
+    transition: all .5s;
 }
 
-
-.botonTurquesaLight{    
+.botonTurquesaLight {
     background-color: white;
     color: $color-header;
     border: 2px solid $color-header;
     transition: all 0.3s;
 }
 
-.botonTraslucido{    
+.botonTurquesaLight:hover {
+    background-color: $color-header;
+    color: white;
+    transition: all 0.3s;
+}
+
+.botonTraslucido {
     background-color: $color-blancoTransparente;
     font-weight: 500;
     color: black;
-    transition: all 0.3s; 
-}
-
-.botonTurquesaLight:hover{
-    background-color: $color-header;
-    color: white;
     transition: all 0.3s;
 }
 
@@ -40,7 +40,7 @@ section {
     font-weight: 600;
     padding: 12px 30px;
     border-radius: 30px;
-    display: inline-block;    
+    display: inline-block;
     margin-bottom: 50px;
     text-decoration: none;
     transition: all 0.3s;
@@ -49,14 +49,13 @@ section {
 .seccionFondoGris {
     background-color: $color-fondoGris;
     margin-top: 50px;
-    // padding-bottom: 50px;
 }
 
 .tituloSeccion {
     text-align: center;
     margin-bottom: 1rem;
     border-bottom: 1px solid $color-grisClaro;
-    font-family: 'Nunito Sans', sans-serif;
+    font-family: $tipo-titulos;
 
     h2 {
         font-size: 1.8rem;
@@ -66,26 +65,23 @@ section {
     }
 }
 
-
 /*---------------------------------HEADER--------------------------------*/
 header {
     background: $color-header;
     font-size: 1.4rem;
-    font-family: 'Nunito Sans', sans-serif;
+    font-family: $tipo-titulos;
 
-    .ubicacion{
-        font-size: 1.2rem;        
+    .ubicacion {
+        font-size: 1.2rem;
         text-decoration: none;
         padding-top: 10px;
     }
-
     h1 {
         color: $color-h1;
         color: white;
         text-align: left;
-        font-family: 'Alice', serif;
+        font-family: $tipo-marca;
     }
-
     .transformScale:hover {
         color: white;
     }
@@ -96,10 +92,10 @@ footer {
     background-color: $color-footer;
     background-color: #F9F9F9;
 
-    .link-dark:hover{
+    .link-dark:hover {
         color: $color-header;
-    }    
-    .redes{
+    }
+    .redes {
         font-size: 1.4rem;
     }
 }
@@ -108,68 +104,63 @@ footer {
 
 .carousel {
     h3 {
-        font-size: 1.8rem;
-        font-family: 'Nunito Sans', sans-serif;
+        font-size: 1.9rem;
+        font-family: $tipo-titulos;
         font-weight: bold;
     }
-
     p {
         font-size: 1.3rem;
-        
-
     }
 }
 
-.seccionAsesoramiento{
-
-    .recuadroIcono {    
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    width: 3rem;
-    height: 3rem;
-    font-size: 1.5rem;
-    border-radius: .75rem;
-    background-color: white;
-     
+.seccionAsesoramiento {
+    .recuadroIcono {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        width: 3rem;
+        height: 3rem;
+        font-size: 1.5rem;
+        border-radius: .75rem;
+        background-color: white;
         .bi {
             vertical-align: auto;
-            color: $color-verde;        
+            color: $color-verde;
         }
     }
 
-    h3{
-        font-family: 'Nunito Sans', sans-serif;
+    h3 {
+        font-family: $tipo-titulos;
         font-size: 1.5rem;
         font-weight: 600;
     }
-    p{
+
+    p {
         font-size: 1.1rem;
     }
 }
 
-.tarjetasEspecies{
+.tarjetasEspecies {
     height: 300px;
     color: white;
     border-radius: 10px;
-    h2{        
-        font-family: 'Nunito Sans', sans-serif;
+
+    h2 {
+        font-family: $tipo-titulos;
         font-weight: 800;
         text-shadow: black 1px 2px;
-        
     }
-    a{
+
+    a {
         font-size: .8rem;
     }
-    a:hover{        
+
+    a:hover {
         border: solid white 2px;
         transition: all 0.3s;
     }
 }
 
-
-  
-  
 
 /*---------------------FORMATO DE PAGINA DE CATALOGO----------------------*/
 
@@ -190,14 +181,13 @@ footer {
     text-align: center;
     margin-bottom: 25px;
     border-bottom: 1px solid $color-grisClaro;
-    font-family: 'Nunito Sans', sans-serif;
+    font-family: $tipo-titulos;
 
     h2 {
         font-size: 1.8rem;
-        font-weight: 600;       
+        font-weight: 600;
         margin-bottom: 10px;
         color: $color-verde;
-        
     }
 }
 
@@ -220,151 +210,142 @@ footer {
             color: $color-azul;
             margin-bottom: 10px;
         }
-
         .precioProducto {
-            // position: absolute;
-            // top: 20px;
-            // right: 30px;
             margin-bottom: 15px;
             font-size: 18px;
             color: black;
-            // text-align: end;
-            
         }
-
         .nombreProducto {
             margin-bottom: 30px;
             font-size: 1.1rem;
         }
-
         .botonComprar {
             position: absolute;
             right: 20px;
             bottom: -5px;
-
             font-size: 1rem;
             background-color: white;
             color: $color-verde;
             font-weight: 450;
             text-decoration: none;
             border: 1px solid $color-verde;
-            margin-top: 20px; 
+            margin-top: 20px;
+            transition: all 0.3s;
         }
-
-        .botonComprar:hover{
+        .botonComprar:hover {
             transform: scale(1.1);
             transition: all .5s;
             background-color: $color-verde;
             color: white;
-        }      
-
+        }
         .sinStock {
             color: $color-rojo;
         }
-
-        .botonNoDisponible{
+        .botonNoDisponible {
             position: absolute;
             right: 20px;
             bottom: -5px;
-
             font-size: 1rem;
             background-color: white;
             color: grey;
             font-weight: 450;
             text-decoration: none;
             border: 1px solid $color-grisClaro;
-            margin-top: 20px;                        
-            cursor: default;         
+            margin-top: 20px;
+            cursor: default;
         }
-
     }
 }
 
 /*------------------------FORMATO DE PAGINA BLOG------------------------*/
 .notasBlog {
     margin-top: 30px;
-    margin-bottom: 30px;    
+    margin-bottom: 30px;
 
     img {
         width: 100%;
     }
-    span{
+    span {
         font-size: 1.1rem;
     }
     h2 {
         font-size: 1.8rem;
         font-weight: 600;
         margin: 20px 0;
-        font-family: 'Nunito Sans', sans-serif;
+        font-family: $tipo-titulos;
     }
-    p{
+    p {
         font-weight: 1.1rem;
     }
     a {
         color: $color-verde;
     }
-    a:hover{
+    a:hover {
         font-weight: 600;
     }
 }
 
-.contenidoNotas{
+.contenidoNotas {
     margin-left: 30px;
-    margin-right: 30px;    
+    margin-right: 30px;
 
-    img{
+    img {
         width: 100%;
     }
-
-    p{
+    p {
         margin-top: 30px;
         font-size: 1.1rem;
     }
-    h3{
+    h3 {
         font-size: 1.5rem;
-        font-family: 'Nunito Sans', sans-serif;
+        font-family: $tipo-titulos;
         font-weight: 600;
         margin-top: 40px;
         color: $color-header;
     }
 
-    .stickyDerecho{
-        h4{
+    .stickyDerecho {
+        h4 {
             font-size: 1.3rem;
         }
-        .botonEtiqueta{
+        .botonEtiqueta {
             border: none;
             border-radius: 20px;
         }
-        .botonEtiqueta:hover{
+        .botonEtiqueta:hover {
             background-color: $color-blancoTransparente;
             color: $color-verde;
         }
-        a{
+        a {
             text-decoration: none;
             color: black;
-            font-family: 'Nunito Sans', sans-serif;
-            font-size: 1.2rem;
+            font-family: $tipo-titulos;
+            font-size: 1.2rem;          
         }
-        a:hover{
+        
+        a:hover {
             font-weight: 600;
         }
-        p{
-           margin-top: 0px;
-           font-size: 1rem;
-           color: $color-grisOscuro;
+        img{
+            // border-radius: 10px;
+            border-top: solid 1px $color-grisClaro ;
+            padding-top: 10px;
         }
-        .volver{
+        p {
+            margin-top: 0px;
+            font-size: 1rem;
+            color: $color-grisOscuro;
+        }
+        .volver {
             font-size: 1.1rem;
             text-decoration: underline;
             color: $color-verde;
-            
+
         }
     }
-
 }
 
-.comentarios{
+.comentarios {
     border: solid 1px $color-grisClaro;
     border-radius: 10px;
     margin-bottom: 50px;
@@ -390,29 +371,24 @@ footer {
             margin-bottom: 10px;
             display: block;
         }
-
         h2 {
             font-size: 2.2rem;
             font-weight: 600;
             margin-bottom: 35px;
-            font-family: 'Alice', serif;
+            font-family: $tipo-marca;
         }
-
         em {
             font-style: normal;
             color: $color-verde;
-            font-family: 'Nunito Sans', sans-serif;
+            font-family: $tipo-titulos;
             font-size: 1.6rem;
         }
-
-        p{
+        p {
             font-size: 1.1rem;
         }
-
-        a:hover {        
+        a:hover {
             color: white;
         }
-
     }
 }
 
@@ -421,7 +397,6 @@ footer {
         width: 100%;
         overflow: hidden;
         margin-bottom: 20px;
-
     }
 
     .infoEquipo {
@@ -435,11 +410,9 @@ footer {
             margin-bottom: 0;
             padding-top: 10px;
         }
-
-        .redes{
+        .redes {
             font-size: 1.2rem;
         }
-
         span {
             color: $color-verde;
             font-weight: 600;
@@ -447,7 +420,6 @@ footer {
             display: block;
             margin-bottom: 15px;
         }
-
         p {
             margin-bottom: 20px;
             font-size: 1.1rem;
@@ -465,23 +437,20 @@ footer {
         background-color: $color-fondoGris;
         text-align: center;
 
-        i{
+        i {
             color: $color-verde;
             font-size: 48px;
             margin-bottom: 40px;
         }
-
         h4 {
             font-size: 1.4rem;
-            font-weight: 600;            
+            font-weight: 600;
             margin-bottom: 15px;
         }
-
         p {
             margin-bottom: 20px;
             font-size: 1.1rem;
         }
-
         a {
             font-weight: 600;
             color: $color-verde;
@@ -495,34 +464,14 @@ footer {
 form {
     width: 70%;
     margin: auto;
-    font-size: 1.1rem;           
+    font-size: 1.1rem;
+
     label {
         color: $color-verde;
-    }   
-       
+    }
 }
 
 
-.botonComprar {
-    position: absolute;
-    right: 25px;
-    bottom: 1px;
-
-    font-size: 1rem;
-    background-color: white;
-    color: $color-verde;
-    font-weight: 450;
-    text-decoration: none;
-    border: 1px solid $color-verde;
-    margin-top: 20px;
-    transition: all 0.3s;
-}
-
-.botonComprar:hover{
-    transform: scale(1.1);
-    transition: all .5s;
-    
-}
 
 
 /*
